--- a/src/entities/TimePeriod/ui/TimeCircleSwitcher/TimeCircleSwitcher.module.scss
+++ b/src/entities/TimePeriod/ui/TimeCircleSwitcher/TimeCircleSwitcher.module.scss
@@ -62,7 +62,7 @@
 .wrapperPoint.active .wrapperPointInner {
   width: 54px;
   height: 54px;
-  background-color: #fff;
+  background-color: #f5f5f5;
   border: 1px solid #303e58;
 }
 
