--- a/src/entities/TimePeriod/ui/TimeControlButton/TimeControlButton.module.scss
+++ b/src/entities/TimePeriod/ui/TimeControlButton/TimeControlButton.module.scss
@@ -1,2 +1,33 @@
 .navigateTime {
+  position: absolute;
+  top: 43.5rem;
+  left: 5rem;
+}
+.navigateTimeButton {
+  cursor: pointer;
+  border-width: 1px;
+  border-color: rgba(66, 86, 122, 0.5);
+  color: #42567a;
+  width: 3.125rem;
+  height: 3.125rem;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  font-family: "PT Sans";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+  &:hover {
+    background-color: #fff;
+  }
+}
+.navigateTimeParagraph {
+  font-family: "PT Sans";
+  font-size: 0.875rem;
+  color: #42567a;
+}
+.navigateTimeButtonBlock {
+  display: flex;
+  width: 7.5rem;
+  justify-content: space-between;
 }
