--- a/src/features/timePeriodControl/TimeCircleSwitcher/TimeCircleSwitcher.module.scss
+++ b/src/features/timePeriodControl/TimeCircleSwitcher/TimeCircleSwitcher.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
   position: absolute;
-  top: 50%;
+  top: 13.4375rem;
   left: 50%;
   width: min(90vw, 33.45rem);
   aspect-ratio: 1;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
 .wrapperCircle {
