--- a/src/features/timePeriodControl/TimePeriodNavigate/TimePeriodNavigate.module.scss
+++ b/src/features/timePeriodControl/TimePeriodNavigate/TimePeriodNavigate.module.scss
@@ -1,8 +1,8 @@
 .header {
   position: absolute;
-  top: 50%;
+  top: 13.5%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   font-size: 12.5rem;
   font-family: "PT Sans Bold";
   display: flex;
