--- a/src/widgets/TimelineModule/ui/TimelineModule.module.scss
+++ b/src/widgets/TimelineModule/ui/TimelineModule.module.scss
@@ -1,8 +1,11 @@
 .section {
   position: relative;
   width: 100%;
+  right: -3rem;
   height: 67.5rem;
   max-width: 90rem;
+  min-width: 90rem;
+  padding-right: 1rem;
   margin: 0 auto;
   border-left: 1.8px solid #42567a20;
   border-right: 1.8px solid #42567a20;
@@ -20,7 +23,6 @@
   }
 
   &::before {
-    top: 0;
     left: 50%;
     width: 1.8px;
     height: 100%;
@@ -28,7 +30,7 @@
   }
 
   &::after {
-    top: 50%;
+    top: 30rem;
     left: 0;
     width: 100%;
     height: 1.8px;
@@ -41,7 +43,7 @@
   width: 22.06rem;
   display: flex;
   align-items: center;
-  height: 8.375rem;
+  height: 7.5rem;
   padding-left: 4.875rem;
   font-size: 3.5rem;
   color: #42567a;
@@ -57,5 +59,11 @@
     width: 5px;
     height: 100%;
     background: linear-gradient(to bottom, #3877ee, #ef5da8);
+  }
+}
+
+@media (max-width: 1540px) {
+  .section {
+    right: 0;
   }
 }
