--- a/src/shared/ui/YearSlide/YearSlide.module.scss
+++ b/src/shared/ui/YearSlide/YearSlide.module.scss
@@ -6,7 +6,6 @@
 
 .slide {
   width: 100%;
-  height: 8.43rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -26,7 +25,7 @@
 .description {
   font-family: "PT Sans";
   color: #42567a;
-  font-size: 1.25rem;
+  font-size: clamp(1rem, 1.5vw, 1.25rem);
   line-height: 1.4;
   text-align: left;
   width: 100%;
@@ -36,4 +35,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+@media (max-width: 600px) {
+  .year {
+    font-size: 1rem;
+  }
+  .description {
+    font-size: 0.875rem;
+  }
 }
