--- a/src/widgets/TimelineModule/ui/TimelineModule.module.scss
+++ b/src/widgets/TimelineModule/ui/TimelineModule.module.scss
@@ -1,11 +1,10 @@
 .section {
   position: relative;
-  width: 100%;
+  width: 90% !important;
   right: -3rem;
   height: 67.5rem;
+  width: calc(100% - 10rem);
   max-width: 90rem;
-  min-width: 90rem;
-  padding-right: 1rem;
   margin: 0 auto;
   border-left: 1.8px solid #42567a20;
   border-right: 1.8px solid #42567a20;
@@ -45,7 +44,7 @@
   align-items: center;
   height: 7.5rem;
   padding-left: 4.875rem;
-  font-size: 3.5rem;
+  font-size: clamp(3rem, 4vw, 3.5rem);
   color: #42567a;
   margin: 0;
   top: 10.625rem;
@@ -65,5 +64,39 @@
 @media (max-width: 1540px) {
   .section {
     right: 0;
+  }
+}
+@media (max-width: 1150px) {
+  .sectionTitle {
+    top: 7rem;
+    padding-left: 3rem;
+  }
+}
+@media (max-width: 900px) {
+  .section {
+    height: 100vh;
+    border: none;
+    &::before {
+      content: none;
+    }
+    &::after {
+      top: calc(11% + 25vw);
+    }
+  }
+  .sectionTitle {
+    width: calc(25vw + 10px);
+    padding-left: 0;
+    top: calc(7vw + -20px);
+    font-size: clamp(1.25rem, 4vw, 3rem);
+    &::before {
+      content: none;
+    }
+  }
+}
+@media (max-width: 600px) {
+  .section {
+    &::after {
+      top: calc(18% + 10vw);
+    }
   }
 }
