--- a/src/features/timePeriodControl/TimePeriodNavigate/TimePeriodNavigate.module.scss
+++ b/src/features/timePeriodControl/TimePeriodNavigate/TimePeriodNavigate.module.scss
@@ -28,13 +28,23 @@
 }
 @media (max-width: 900px) {
   .header {
-    top: calc(7vw + 35px);
-    font-size: clamp(3.5rem, 10vw, 12.5rem);
+    top: 4rem;
+    font-size: 5rem;
   }
   .headerFirstYear {
     color: #3877ee;
   }
   .headerLastYear {
     color: #f178b6;
+  }
+}
+@media (max-width: 550px) {
+  .header {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 360px) {
+  .header {
+    font-size: 3.5rem;
   }
 }
