--- a/src/assets/fonts/PTSans/PTSans.css
+++ b/src/assets/fonts/PTSans/PTSans.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "PT Sans Bold";
-  src: url("./PTSans-Bold.ttf") format("truetype");
+  src: url("./pt-sans_bold.woff2") format("woff2");
   font-weight: 600;
 }
 
 @font-face {
   font-family: "PT Sans";
-  src: url("./PTSans-Regular.ttf") format("truetype");
+  src: url("./pt-sans_regular.woff2") format("woff2");
 }
