--- a/src/widgets/TimelineModule/ui/TimelineModule.module.scss
+++ b/src/widgets/TimelineModule/ui/TimelineModule.module.scss
@@ -93,6 +93,13 @@
     }
   }
 }
+@media (max-width: 600px) {
+  .section {
+    height: 100vh;
+    max-height: 800px;
+  }
+}
+
 @media (max-width: 550px) {
   .section {
     &::after {
